--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "@react-native-firebase/app": "^11.2.0",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "D": "^1.0.0",
@@ -18,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "git+https://github.com/expo/react-native.git",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
